<resources>
    <string name="app_name">Battleships</string>
    <string name="quick_game">Quick Game</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="how_to_play">How To Play</string>
    <string name="fire">Fire!</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>
    <string name="win">yay, you won! (eg. felmeddelande)</string>
    <string name="settings">Settings</string>
    <string name="settingsHead">Change your settings </string>
    <string name="leaveHead">Are you sure that you want to leave this game? </string>
    <string name="leaveText">All game data will be lost.</string>
    <string name="music">Music</string>
    <string name="backgroundMusic">Background music</string>
    <string name="effectMusic">Sound effects</string>
    <string name="switchWin">Always win</string>
    <string name="reset">Reset</string>
    <string name="place">Place</string>

    <string name="place_your_ships">Place your ships</string>

    <string name="ship2r">3</string>
    <string name="ship3r">2</string>
    <string name="ship4r">1</string>
    <string name="x">x</string>

    <string name="placed_all_ships">You have placed all of your ships of this size.</string>
</resources>
